@@ -66,6 +66,9 @@ public class EcsSpecExtension extends AbstractSpecExtension {
     List<EcsEfsVolume> ecsEfsVolumes = new ArrayList<>();
 
     @Builder.Default
+    List<String> ecsBindVolumes = new ArrayList<>();
+
+    @Builder.Default
     List<EcsManagedSecret> ecsManagedSecrets = new ArrayList<>();
 
     @Builder.Default
@@ -73,6 +76,9 @@ public class EcsSpecExtension extends AbstractSpecExtension {
 
     @Builder.Default
     SpelField.String ecsRepositoryCredentialsParameter = new SpelField.String();
+
+    @Builder.Default
+    SpelField.Boolean ecsReadonlyRootFilesystem = new SpelField.Boolean();
 
     @Override
     public ISpecExtension firstResolve(SpecExpressionResolver resolver, SpecExpressionContext context) {
@@ -82,10 +88,12 @@ public class EcsSpecExtension extends AbstractSpecExtension {
             .ecsCpuArchitecture(ecsCpuArchitecture.resolve(resolver, context))
             .ecsOperationSystemFamily(ecsOperationSystemFamily.resolve(resolver, context))
             .ecsEphemeralStorageSize(ecsEphemeralStorageSize.resolve(resolver, context))
-            .ecsEfsVolumes(ecsEfsVolumes.stream().map(p -> p.resolve(resolver, context)).collect(Collectors.toList()))
-            .ecsManagedSecrets(ecsManagedSecrets.stream().map(p -> p.resolve(resolver, context)).collect(Collectors.toList()))
+            .ecsEfsVolumes(ecsEfsVolumes.stream().map(p -> p.resolve(resolver, context)).toList())
+            .ecsBindVolumes(ecsBindVolumes.stream().map(v -> resolver.evaluateToString( v, context)).toList())
+            .ecsManagedSecrets(ecsManagedSecrets.stream().map(p -> p.resolve(resolver, context)).toList())
             .ecsEnableExecuteCommand(ecsEnableExecuteCommand.resolve(resolver, context))
             .ecsRepositoryCredentialsParameter(ecsRepositoryCredentialsParameter.resolve(resolver, context))
+            .ecsReadonlyRootFilesystem(ecsReadonlyRootFilesystem.resolve(resolver, context))
             .build();
     }
 
